Update GameControllerTest to match new implementation