@@ -3,6 +3,7 @@ package at.aau.serg.scotlandyard.controller;
 import at.aau.serg.scotlandyard.dto.GameOverviewDTO;
 import at.aau.serg.scotlandyard.gamelogic.GameManager;
 import at.aau.serg.scotlandyard.gamelogic.GameState;
+import at.aau.serg.scotlandyard.gamelogic.player.Player;
 import at.aau.serg.scotlandyard.gamelogic.player.tickets.Ticket;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -13,6 +14,7 @@ import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 
 import java.util.*;
+import java.util.Map.Entry;
 
 import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
@@ -24,6 +26,9 @@ class GameControllerTest {
 
     @Mock
     private GameState gameState;
+
+    @Mock
+    private Player player;
 
     @InjectMocks
     private GameController gameController;
@@ -46,61 +51,101 @@ class GameControllerTest {
         assertEquals(HttpStatus.NOT_FOUND, response.getStatusCode());
         assertEquals("Game mit ID '" + GAME_ID + "' nicht gefunden.", response.getBody());
     }
-/*
+
     @Test
     void getMoves_WhenGameExists_ReturnsAllowedMoves() {
-        List<Integer> expectedMoves = List.of(1, 2, 3);
+        Map<Integer, Ticket> moves = new HashMap<>();
+        moves.put(1, Ticket.TAXI);
+        moves.put(2, Ticket.BUS);
+        moves.put(3, Ticket.UNDERGROUND);
+        List<Entry<Integer, Ticket>> expectedMoves = new ArrayList<>(moves.entrySet());
+
         when(gameManager.getGame(GAME_ID)).thenReturn(gameState);
         when(gameState.getAllowedMoves(PLAYER_NAME)).thenReturn(expectedMoves);
 
         ResponseEntity<?> response = gameController.getMoves(GAME_ID, PLAYER_NAME);
 
-
         assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(expectedMoves, response.getBody());
+        assertTrue(response.getBody() instanceof List);
+
+        @SuppressWarnings("unchecked")
+        List<Entry<Integer, String>> responseBody = (List<Entry<Integer, String>>) response.getBody();
+        assertEquals(3, responseBody.size());
+        assertEquals("TAXI", responseBody.get(0).getValue());
+        assertEquals("BUS", responseBody.get(1).getValue());
+        assertEquals("UNDERGROUND", responseBody.get(2).getValue());
+    }
+
+    @Test
+    void move_WhenInvalidTicket_ReturnsErrorMessage() {
+        Map<String, String> result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, "INVALID_TICKET");
+
+        assertEquals("Ungültiges Ticket: INVALID_TICKET", result.get("message"));
     }
 
     @Test
     void move_WhenGameNotFound_ReturnsGameNotFound() {
         when(gameManager.getGame(GAME_ID)).thenReturn(null);
 
-        String result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, Ticket.TAXI);
+        Map<String, String> result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, "TAXI");
 
-        assertEquals(GameController.GAME_NOT_FOUND, result);
-    }*/
-/*
+        assertEquals("Spiel nicht gefunden!", result.get("message"));
+    }
+
+    @Test
+    void move_WhenPlayerNotFound_ReturnsErrorMessage() {
+        when(gameManager.getGame(GAME_ID)).thenReturn(gameState);
+        when(gameState.getAllPlayers()).thenReturn(new HashMap<>());
+
+        Map<String, String> result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, "TAXI");
+
+        assertEquals("Spieler " + PLAYER_NAME + " existiert nicht!", result.get("message"));
+    }
+
     @Test
     void move_WhenInvalidMove_ReturnsErrorMessage() {
+        Map<String, Player> players = new HashMap<>();
+        players.put(PLAYER_NAME, player);
+
         when(gameManager.getGame(GAME_ID)).thenReturn(gameState);
+        when(gameState.getAllPlayers()).thenReturn(players);
         when(gameState.movePlayer(PLAYER_NAME, POSITION, Ticket.TAXI)).thenReturn(false);
 
-        String result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, Ticket.TAXI);
+        Map<String, String> result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, "TAXI");
 
-        assertEquals("Ungültiger Zug!", result);
+        assertEquals("Ungültiger Zug!", result.get("message"));
     }
 
     @Test
     void move_WhenValidMove_ReturnsSuccessMessage() {
+        Map<String, Player> players = new HashMap<>();
+        players.put(PLAYER_NAME, player);
+
         when(gameManager.getGame(GAME_ID)).thenReturn(gameState);
+        when(gameState.getAllPlayers()).thenReturn(players);
         when(gameState.movePlayer(PLAYER_NAME, POSITION, Ticket.TAXI)).thenReturn(true);
         when(gameState.getWinner()).thenReturn(GameState.Winner.NONE);
 
-        String result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, Ticket.TAXI);
+        Map<String, String> result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, "TAXI");
 
-        assertEquals("Spieler " + PLAYER_NAME + " bewegt sich zu " + POSITION + " in Spiel " + GAME_ID, result);
+        assertEquals("Spieler " + PLAYER_NAME + " bewegt sich zu " + POSITION + " in Spiel " + GAME_ID, result.get("message"));
     }
 
     @Test
     void move_WhenMoveWinsGame_ReturnsWinnerMessage() {
+        Map<String, Player> players = new HashMap<>();
+        players.put(PLAYER_NAME, player);
 
         when(gameManager.getGame(GAME_ID)).thenReturn(gameState);
+        when(gameState.getAllPlayers()).thenReturn(players);
         when(gameState.movePlayer(PLAYER_NAME, POSITION, Ticket.TAXI)).thenReturn(true);
         when(gameState.getWinner()).thenReturn(GameState.Winner.MR_X);
 
-        String result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, Ticket.TAXI);
+        Map<String, String> result = gameController.move(GAME_ID, PLAYER_NAME, POSITION, "TAXI");
 
-        assertEquals("Mr.X hat gewonnen!", result); }
-*/
+        assertEquals("Mr.X hat gewonnen!", result.get("message"));
+    }
+
     @Test
     void moveDouble_WhenGameNotFound_ReturnsGameNotFound() {
         when(gameManager.getGame(GAME_ID)).thenReturn(null);
@@ -172,8 +217,9 @@ class GameControllerTest {
 
     @Test
     void getAllGames_ReturnsListOfGameOverviewDTOs() {
-
-        Set<String> gameIds = Set.of("game1", "game2");
+        Set<String> gameIds = new HashSet<>();
+        gameIds.add("game1");
+        gameIds.add("game2");
         when(gameManager.getAllGameIds()).thenReturn(gameIds);
 
         GameState gameState1 = mock(GameState.class);
@@ -188,11 +234,11 @@ class GameControllerTest {
 
         assertEquals(2, result.size());
 
-        List<String> resultIds = result.stream()
-                .map(GameOverviewDTO::getGameId)
-                .sorted()
-                .toList();
-        assertEquals(List.of("game1", "game2"), resultIds);
+        List<String> resultIds = new ArrayList<>();
+        resultIds.add(result.get(0).getGameId());
+        resultIds.add(result.get(1).getGameId());
+        Collections.sort(resultIds);
+        assertEquals(Arrays.asList("game1", "game2"), resultIds);
     }
 
     @Test
